[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromancer"
authors = [
    { name = "Jan Drgona", email = "jdrgona1@jh.edu" },
    { name = "Aaron Tuor", email = "aaron.tuor@pnnl.gov" },
    { name = "James Koch", email = "james.koch@pnnl.gov" },
    { name = "Madelyn Shapiro", email = "madelyn.shapiro@pnnl.gov"},
    { name = "Rahul Birmiwal", email = "rahul.birmiwal@pnnl.gov"},
    { name = "Draguna Vrabie", email = "draguna.vrabie@pnnl.gov" },
    { name = "Bruno Jacob", email = "bruno.jacbo@pnnl.gov" },
    { name = "Reilly Raab", email = "reilly.raab@pnnl.gov" }
]
description = "Neural Modules with Adaptive Nonlinear Constraints and Efficient Regularization"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "Deep Learning",
    "Pytorch",
    "Linear Models",
    "Dynamical Systems",
    "Data-driven control",
]

license = { text = "BSD-2-Clause" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License"
]

# Key fixes:
# - mlflow pin split by Python version to avoid old pyarrow on 3.12
# - allow newer numpy/networkx to avoid Colab conflicts
# - ensure a PyArrow with wheels exists on 3.12
dependencies = [
    "dill",
    "graphviz",
    "matplotlib",
    "mlflow==2.5.0; python_version < '3.12'",
    "mlflow>=2.14; python_version >= '3.12'",
    "pyarrow>=14; python_version >= '3.12'",
    "networkx>=3.0,<4",
    "numpy>=1.26",
    "pandas",
    "plum_dispatch>=1.7.3,<2",
    "scikit_learn",
    "scipy",
    "six",
    "pydot>=1.4.2,<2",
    "pyts",
    "torch",
    "torchdiffeq",
    "toml",
    "lightning",
    "cvxpy",
    "cvxpylayers",
    "casadi",
    "wandb",
    "torchsde"
]

version = "1.5.4"

[project.urls]
homepage = "https://github.com/pnnl/neuromancer/"
documentation = "https://github.com/pnnl/neuromancer/"
repository = "https://github.com/pnnl/neuromancer/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
tests = ["pytest", "hypothesis"]
examples = ["casadi", "cvxpy", "imageio", "cvxpylayers"]
docs = ["sphinx", "sphinx-rtd-theme"]
